# CAN-Tablo-Driver

./: .dockerignore  .gitignore  Dockerfile  README.md  can-up.sh  compose.yaml  deploy-src.sh  docker-compose.yaml  docker-save-deploy.sh  led-tablo.service  main.py  nuitka-crash-report.xml  pyproject.toml  run_api_server.py  tablo.run
.cursor/plans/: docker-build.plan.md
.github/workflows/: ci.yml
data/: text-in.json
docker/etc/: config.example.toml
docs/: API_LEDDISPLAYS_V1.md  API_LEDDISPLAYS_V1_EXTERNAL.md  API_LEDDISPLAYS_V2.md
etc/: front-config.toml  interior-config.toml  rear-config.toml  side-config.toml
scripts/: build-nuitka.sh
src/: .config.toml.swp  api_app.py  config.toml  config.toml.example  led_config.py  led_service.py  main.py  multi_transport.py  simulate_all_displays.py
tablo-can-driver.bin/: config.toml
tests/: test_api.py  test_color_wire_map.py  test_mask_row_padded.py  test_scroll_and_ticker_config.py  test_truncate_text.py
