[project]
name = "can"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "can-isotp>=2.0.0",
    "fastapi>=0.135.2",
    "nuitka>=4.0.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-can>=4.3.0",
    "tomli-w>=1.2.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
